--- a/CH18/MyselfQQ/MyselfQQ.vcxproj.filters
+++ b/CH18/MyselfQQ/MyselfQQ.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Form Files">
@@ -62,8 +62,14 @@
     <ClCompile Include="widget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyToolBtn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <CustomBuild Include="MyToolBtn.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
     <CustomBuild Include="client.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
@@ -78,6 +84,12 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="debug\moc_MyToolBtn.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
+    <ClCompile Include="release\moc_MyToolBtn.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
     <ClCompile Include="debug\moc_client.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
