--- a/CH19/CH1903/Image/Image.vcxproj
+++ b/CH19/CH1903/Image/Image.vcxproj
@@ -148,16 +148,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="images\?????.jpg" />
+    <None Include="images\栖霞山枫叶.jpg" />
     <None Include="MainForm.ui.qml" />
     <None Include="main.qml" />
     <CustomBuild Include="qml.qrc">
       <FileType>Document</FileType>
-      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\?????.jpg;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\栖霞山枫叶.jpg;%(AdditionalInputs)</AdditionalInputs>
       <Command Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe -name qml qml.qrc -o release\qrc_qml.cpp</Command>
       <Message Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">RCC qml.qrc</Message>
       <Outputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">release\qrc_qml.cpp;%(Outputs)</Outputs>
-      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\?????.jpg;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\栖霞山枫叶.jpg;%(AdditionalInputs)</AdditionalInputs>
       <Command Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe -name qml qml.qrc -o debug\qrc_qml.cpp</Command>
       <Message Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">RCC qml.qrc</Message>
       <Outputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">debug\qrc_qml.cpp;%(Outputs)</Outputs>
