--- a/CH21/CH2106/View/View.vcxproj
+++ b/CH21/CH2106/View/View.vcxproj
@@ -148,17 +148,18 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="images\??.jpg" />
-    <None Include="images\????.jpg" />
+    <None Include="images\大卫.jpg" />
+    <None Include="images\蒙娜丽莎.jpg" />
+    <None Include="images\圣母.jpg" />
     <None Include="MainForm.ui.qml" />
     <None Include="main.qml" />
     <CustomBuild Include="qml.qrc">
       <FileType>Document</FileType>
-      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\??.jpg;images\????.jpg;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\大卫.jpg;images\蒙娜丽莎.jpg;images\圣母.jpg;%(AdditionalInputs)</AdditionalInputs>
       <Command Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe -name qml qml.qrc -o release\qrc_qml.cpp</Command>
       <Message Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">RCC qml.qrc</Message>
       <Outputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Release|Win32&apos;">release\qrc_qml.cpp;%(Outputs)</Outputs>
-      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\??.jpg;images\????.jpg;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">qml.qrc;D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe;MainForm.ui.qml;main.qml;images\大卫.jpg;images\蒙娜丽莎.jpg;images\圣母.jpg;%(AdditionalInputs)</AdditionalInputs>
       <Command Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">D:\Qt\Qt5.7.0-Windows\5.7\msvc2015\bin\rcc.exe -name qml qml.qrc -o debug\qrc_qml.cpp</Command>
       <Message Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">RCC qml.qrc</Message>
       <Outputs Condition="&apos;$(Configuration)|$(Platform)&apos;==&apos;Debug|Win32&apos;">debug\qrc_qml.cpp;%(Outputs)</Outputs>
